k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-api
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mi-api
  template:
    metadata:
      labels:
        app: mi-api
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "mi-api"
        vault.hashicorp.com/agent-inject-secret-config: "secret/data/mi-api"
    spec:
      serviceAccountName: mi-api-sa
      containers:
      - name: mi-api
        image: hashicorp/http-echo
        args:
          - "-text=Hola desde mi API en EKS!"
        ports:
        - containerPort: 5678
